--- a/ui.html
+++ b/ui.html
@@ -108,7 +108,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://we-recruit.join.com/jobs/267330-researcher-associate-consultant-executive-search'>Job @ WE RECRUIT (Z?rich): Researcher/ Associate C... | JOIN</a></h5> 
+<h5><a href='https://we-recruit.join.com/jobs/267330-researcher-associate-consultant-executive-search'>Job @ WE RECRUIT (Z?rich): Researcher/ Associate C... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -242,7 +242,7 @@ involve?...</p>
 <p><span class="badge badge-light">Belgrade Belgrade</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/intouchgroup/ad4fda5d-0c8e-4c4b-a7e3-923c40c75b98'>Intouch Group - ASSOCIATE TALENT ACQUISITION MANAGER</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/intouchgroup/ad4fda5d-0c8e-4c4b-a7e3-923c40c75b98'>Intouch Group - ASSOCIATE TALENT ACQUISITION MANAGER</a></h5> 
 <p><span class="badge badge-light">Overland Park, KS</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -262,7 +262,7 @@ involve?...</p>
 <p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/4350/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/4350/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -274,7 +274,7 @@ involve?...</p>
 <p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/4354/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/4354/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -356,7 +356,7 @@ objectively measure impact and optimize engineering processes; Meeting?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/retailindia/jobs/1767781'>Job Application for Senior UI Developer at Endurance International Group - India</a></h5> 
+<h5><a href='https://boards.greenhouse.io/retailindia/jobs/1767781'>Job Application for Senior UI Developer at Endurance International Group - India</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -373,7 +373,7 @@ generation web and mobile components and interfaces. Develop new ways of?...</p>
 <p><span class="badge badge-light">Vietnam Vietnam</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/splunk/job/o36CafwF'>Splunk Careers - Principal UI Designer, Enterprise</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/splunk/job/o36CafwF'>Splunk Careers - Principal UI Designer, Enterprise</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Join us as we pursue our disruptive new vision to make machine data accessible, 
 usable and valuable to everyone. We are a company filled with people who?...</p>
@@ -400,7 +400,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/3pillarglobal/9630ec28-31ca-4141-86bb-dc5eaa6f59d6'>3Pillar Global - Junior UI Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/3pillarglobal/9630ec28-31ca-4141-86bb-dc5eaa6f59d6'>3Pillar Global - Junior UI Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
